[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/themeDefault.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/UI/Buttons/ui_fullscreenButton1.png" type="Texture" id=3]

[node name="PauseMenu" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 52.0
margin_top = 39.0
margin_right = 99.0
margin_bottom = 113.0

[node name="Pause_Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 47.0
margin_bottom = 24.0
text = "Paused!"
align = 1

[node name="Resume_Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 47.0
margin_bottom = 49.0
text = "Resume"

[node name="Quit_Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 47.0
margin_bottom = 74.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Quit"

[node name="FullScreen_Button" type="Button" parent="."]
anchor_left = 0.828947
anchor_top = 0.0263158
anchor_right = 0.973684
anchor_bottom = 0.164474
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume_Button" to="." method="_on_Resume_Button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit_Button" to="." method="_on_Quit_Button_pressed"]
[connection signal="pressed" from="FullScreen_Button" to="." method="_on_FullScreen_Button_pressed"]
